# Parking-Simulator

./: README.md
display-board/: Cargo.toml
display-board/src/: main.rs
ir-rx-board/: Cargo.toml  info.txt
ir-rx-board/src/: main.rs
kicad-files/: docs-proj.kicad_prl  docs-proj.kicad_pro  docs-proj.kicad_sch
main-board/: Cargo.toml
main-board/src/: main.rs
pico_2w-part/: Cargo.toml
pico_2w-part/src/: main.rs
pico_w-part/: Cargo.toml  rust-toolchain.toml
pico_w-part/.cargo/: config  config.toml
pico_w-part/src/: main.rs
pico_w-part1/: Cargo.toml
pico_w-part1/embassy-lab-utils/: Cargo.toml
pico_w-part1/src/: main.rs
pico_w-part2/: Cargo.toml  ir_rx_send.py
pico_w-part2/embassy-lab-utils/src/: lib.rs
pico_w-part2/src/: main.rs
