[package]
name = "pico_w-part1"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy framework and utilities
embassy-lab-utils = { path = "./embassy-lab-utils" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }

# Networking and WiFi
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

# Logging and debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Fixed-point arithmetic
fixed = "1.23.1"

# Cortex-M specific dependencies
cortex-m-rt = "0.7.0"

# Embedded graphics and display
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"

# Embedded HAL and utilities
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2.1"

# Miscellaneous
heapless = "0.8"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"