[package]
name = "pico_2w-part"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Embassy framework and utilities
embassy-lab-utils = { path = "./embassy-lab-utils" }
embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt"] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-net = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }

# Networking and WiFi
cyw43 = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt"] }

# Logging and debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Fixed-point arithmetic
fixed = "1.23.1"

# Cortex-M specific dependencies
cortex-m-rt = "0.7.0"

# Embedded HAL and utilities
heapless = "0.8"
static_cell = "2.1"

[workspace]
members = ["./embassy-lab-utils"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
edition = "2024"
version = "0.1.0"